# tb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  config.json.example
cmake/: BaiduOCR.cmake  CompilerOptionCheck.cmake  ConfigCheck.cmake  FindZbar.cmake  Gtest.cmake  RapidJSON.cmake
filechecker/: config.cpp  fchecker.cpp  fchecker.h  options.cpp
include/: config.h.in  db.h  id.h  image.h  logger.h  remote.h  settings.h  taobao.h  threads.h  utils.h
lib/: db.cpp  id.cpp  image.cpp  logger.cpp  remote.cpp  settings.cpp  utils.cpp
test/: main.cpp  tests.h
test/json/: json.test.cpp  test_1.json
test/tests/: id_tests.cpp  utils.cpp
test/utils/: barCode.cpp  img.cpp  log_test.cpp  sftptest.cpp
