
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)


PROJECT(taobao)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
SET(TB_INCLUDE_ROOT ${CMAKE_SOURCE_DIR}/include/)

INCLUDE_DIRECTORIES(${TB_INCLUDE_ROOT})

SET(CMAKE_CXX_STANDARD 14)
SET(PROJECT_VERSION 0.0.0)
STRING(TIMESTAMP TB_BUILD_TIME "%Y-%m-%d %H:%M:%SZ")
SET(USE_POSIX_THREAD 1)
#SET(USE_CXX_THREAD 1)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(PROJECT_BUILD_PATH ${CMAKE_SOURCE_DIR})

INCLUDE(CompilerOptionCheck)
INCLUDE(ConfigCheck)


### dependencies start

INCLUDE(FindPkgConfig)

#zbar
PKG_SEARCH_MODULE(zbar REQUIRED zbar)
SET(ZBAR_VERSION ${zbar_VERSION})
MESSAGE(STATUS "zbar version: " ${zbar_VERSION})

LIST(APPEND libList ${zbar_LIBRARIES})

#tesseract
PKG_SEARCH_MODULE(tesseract REQUIRED tesseract >= 4.0)
IF (${tesseract_FOUND})
  MESSAGE(STATUS "Tesseract version: " ${tesseract_VERSION})
  SET(TESSERACT_VERSION ${tesseract_VERSION})
  ADD_COMPILE_OPTIONS(${tesseract_CFLAGS})
ELSE()
  MESSAGE(FATAL_ERROR "Must have tesseract > 4.0 installed.")
ENDIF()

LIST(APPEND libList ${tesseract_LIBRARIES})

#rapidJSON
INCLUDE(RapidJSON)

#boost
FIND_PACKAGE(Boost 1.60 COMPONENTS thread )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
STRING(CONCAT TB_BOOST_VERSION ${Boost_MAJOR_VERSION} "." ${Boost_MINOR_VERSION} "." ${Boost_SUBMINOR_VERSION})
LIST(APPEND libList ${Boost_THREAD_LIBRARIES})
SET(BOOST_VERSION ${TB_BOOST_VERSION})

#thread
FIND_PACKAGE(Threads REQUIRED)
LIST(APPEND libList pthread)

#opencv
FIND_PACKAGE(OpenCV 3.0 REQUIRED)
SET(OPENCV_VERSION ${OpenCV_VERSION})
LIST(APPEND libList ${OpenCV_LIBS})

#zlib
INCLUDE(FindZLIB)
FIND_PACKAGE(ZLIB REQUIRED)
SET(ZLIB_VERSION ${ZLIB_VERSION_STRING})
LIST(APPEND libList ${ZLIB_LIBRARIES})

##dependencies end

#### configure file.
CONFIGURE_FILE(${TB_INCLUDE_ROOT}/config.h.in
  ${TB_INCLUDE_ROOT}/config.h)

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/lib TB_SOURCE_LIST)

AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/filechecker FC_LIST)

ADD_LIBRARY(tb STATIC ${TB_SOURCE_LIST} )

ADD_EXECUTABLE(fchecker ${FC_LIST})

ADD_DEPENDENCIES(tb RapidJSON)

ADD_DEPENDENCIES(fchecker tb)

TARGET_LINK_LIBRARIES(fchecker tb pthread ${libList})
## tests

INCLUDE(Gtest)

AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/test/json TB_TEST_SOURCE_LIST)

ADD_EXECUTABLE(tbTest ${TB_TEST_SOURCE_LIST}
  ${CMAKE_SOURCE_DIR}/test/main.cpp)

ADD_DEPENDENCIES(tbTest gtest)

ADD_EXECUTABLE(imgTest ${CMAKE_SOURCE_DIR}/test/utils/img.cpp)

ADD_EXECUTABLE(log_test ${CMAKE_SOURCE_DIR}/test/utils/log_test.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/test)

TARGET_LINK_LIBRARIES(imgTest tb ${libList})
TARGET_LINK_LIBRARIES(tbTest libgtest tb ${libList})
TARGET_LINK_LIBRARIES(log_test tb pthread ${libList})
